# RaptorQ-in-JABCode

./: .gitmodules  README.md  RaptorQ-in-JABCode.code-workspace
mobile/: .gitignore  README.md  pubspec.yaml
mobile/android/: CMakeLists.txt
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/edu/seu/raptorq_in_jabcode/: MainActivity.kt
mobile/android/app/src/profile/: AndroidManifest.xml
mobile/lib/: main.dart  var.dart
mobile/lib/jabcode/: generated_jabcode.dart  import_jabcode.dart
mobile/lib/pages/: home.dart  scan.dart  send.dart
mobile/test/: widget_test.dart
